-- Fixed Set icons clipping issues on retina

--- a/stylesheets/scss/sprites.scss
+++ b/stylesheets/scss/sprites.scss
@@ -70,19 +70,19 @@
     height: 20px;
 }
 .set-other {
-    background: url('../../img/sprites.png') no-repeat -100px -110px;
+    background: url('../../img/sprites.png') no-repeat -100px -108px;
     width: 20px;
-    height: 20px;
+    height: 22px;
 }
 .set-traffic {
-    background: url('../../img/sprites.png') no-repeat -130px -111px;
+    background: url('../../img/sprites.png') no-repeat -130px -109px;
     width: 20px;
-    height: 20px;
+    height: 22px;
 }
-.set-school {
-    background: url('../../img/sprites.png') no-repeat -160px -111px;
+.set-school { 
+    background: url('../../img/sprites.png') no-repeat -160px -109px;
     width: 20px;
-    height: 20px;
+    height: 22px;
 }
 .coh {
     background: url('../../img/sprites.png') no-repeat -145px -147px;
